--- a/VIX_vs_SP500.ipynb
+++ b/VIX_vs_SP500.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "87e42a53-ddcd-4266-9c4d-410e00413304",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
        "1993-02-08  2.480625"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,12 +329,13 @@
     "merged_pc = pd.merge(vix_pc.abs(), sp_pc.abs(), left_index=True, right_index=True, suffixes=('_vix', '_sp500'))\n",
     "merged_pc['VIX_to_SP500_ratio'] = merged_pc['Close', '^VIX'] / merged_pc['Close', '^GSPC']\n",
     "merged_pc = merged_pc.replace([np.inf, -np.inf], np.nan).dropna()\n",
+    "print(\"Percent Change and move magnitude\").\n",
     "merged_pc[:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "e1c412f6-1767-4720-86f9-0676997ae667",
    "metadata": {},
    "outputs": [
@@ -342,6 +343,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Move per 1% in S&P500:\n",
       "Median: 6.808\n",
       "Mean: 26.489\n"
      ]
@@ -350,7 +352,7 @@
    "source": [
     "median_move = merged_pc['VIX_to_SP500_ratio'].median()\n",
     "average_move = merged_pc['VIX_to_SP500_ratio'].mean()\n",
-    "print(f\"Median: {median_move:.3f}\\nMean: {average_move:.3f}\")"
+    "print(f\"Move per 1% in S&P500:\\nMedian: {median_move:.3f}\\nMean: {average_move:.3f}\")"
    ]
   },
   {
