--- a/VIX_vs_SP500.ipynb
+++ b/VIX_vs_SP500.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a2db07a7-bfc8-4820-bf89-4bb4c4e1b2e6",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "d3b14db7-5dd9-46f2-89eb-98c656fccb6e",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "87e42a53-ddcd-4266-9c4d-410e00413304",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
        "1993-02-08  2.480625"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "b6ca4bf7-317c-40e4-8fac-0e92ad1847d8",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
        "1993-02-08 -0.240569"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,10 +229,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "2718b64b-e117-4d0b-9c01-55a5013ac4eb",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percent Change and Move Magnitude\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -320,7 +327,7 @@
        "1993-02-08  2.480625  0.240569          10.311490"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,13 +336,13 @@
     "merged_pc = pd.merge(vix_pc.abs(), sp_pc.abs(), left_index=True, right_index=True, suffixes=('_vix', '_sp500'))\n",
     "merged_pc['VIX_to_SP500_ratio'] = merged_pc['Close', '^VIX'] / merged_pc['Close', '^GSPC']\n",
     "merged_pc = merged_pc.replace([np.inf, -np.inf], np.nan).dropna()\n",
-    "print(\"Percent Change and move magnitude\").\n",
+    "print(\"Percent Change and Move Magnitude\")\n",
     "merged_pc[:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "e1c412f6-1767-4720-86f9-0676997ae667",
    "metadata": {},
    "outputs": [
@@ -357,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "0b3bf974-8066-447e-b28e-bcc0ec55c959",
    "metadata": {},
    "outputs": [
@@ -566,7 +573,7 @@
        "2014-07-17    32.182"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
